# Application

./: CMakeLists.txt
.cmake/api/v1/reply/: cache-v2-6189fcd58e1879409eb4.json  cache-v2-e059b910a5d900ec04d8.json  cmakeFiles-v1-8e896a0e46d32f04a772.json  cmakeFiles-v1-f14084ab8d574f0041bc.json  codemodel-v2-b906d99cf319b48558ad.json  directory-.-Debug-8f77d747712848ac3503.json  index-2026-04-30T06-58-33-0627.json  target-all_qmllint-Debug-3229895d41b6a84cea2e.json  target-all_qmllint-Debug-b2f9d87ee2ac005518e3.json  target-all_qmllint_json-Debug-559a5530f076eef9e3b5.json  target-all_qmllint_module-Debug-3841db1f80caab88ee0d.json  target-all_qmltyperegistrations-Debug-2c4ca610c848033fbb99.json  target-appApplication-Debug-ea335801c730ba020768.json  target-appApplication_autogen-Debug-c53f8e13ba1dff22442b.json  target-appApplication_autogen_timestamp_deps-Debug-f346aa94372b25eec738.json  target-appApplication_copy_res-Debug-da5827b54f318dad00c0.json  target-appApplication_qmlimportscan-Debug-6a2639100e0af52e318d.json  target-appApplication_qmlimportscan-Debug-7783dba0b11de0898304.json  target-appApplication_qmllint-Debug-e045b52cd229ed04313f.json  target-appApplication_qmllint_json-Debug-8ce401fa0f986a3f839d.json  target-appApplication_qmllint_module-Debug-370edc2cd05c03cdd2b4.json  target-appApplication_qmllint_module-Debug-397bf1815a4fb5d59e49.json  target-appApplication_qmltyperegistration-Debug-304fd01f5aaefd8a7948.json  target-appApplication_tooling-Debug-aa65130c6f8864cbc7b9.json  target-generate_qmlls_build_ini_file-Debug-3a461655d8d5f379dff0.json
.cmake/api/v1/reply.prev/: codemodel-v2-5d6554d6fd8939d2092f.json  directory-.-Debug-bccf553296386a18e051.json  index-2026-04-15T11-52-24-0795.json  target-all_aotstats-Debug-34d363adf8ada12d7ebb.json  target-all_qmllint_module-Debug-585f5275a083f79ee52e.json  target-all_qmltyperegistrations-Debug-8ccad524ebab12c84cba.json  target-appApplication-Debug-f5b4f7ff38354283ca80.json  target-appApplication_copy_qml-Debug-67d186930b089c5ac066.json  target-appApplication_qmllint-Debug-b68b76520d4146ece771.json  target-appApplication_qmllint_json-Debug-64a76276813b703893b8.json  target-appApplication_qmltyperegistration-Debug-880821a295e42cc1ec88.json  target-module_appApplication_aotstats_target-Debug-e8837d82cbf84a8e18b6.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  appApplication_qml.cmake  appApplication_res.cmake
.qt/deploy_qml_imports/: appApplication.cmake
.qt/qml_imports/: appApplication_build.rsp  appApplication_conf.cmake  appApplication_conf.rsp
.qt/rcc/: appApplication_raw_qml_0.qrc  appApplication_raw_qml_0_extra_qmldirs.qrc  qmake_Application.qrc
.qt_plugins/: Qt6_QmlPlugins_Imports_appApplication.rsp
.rcc/: appApplication_raw_qml_0.qrc
.rcc/qmlcache/: all_aotstats.aotstatslist  appApplication_qml_loader_file_list.rsp  module_appApplication.aotstatslist
.rcc/qmllint/: appApplication.rsp  appApplication_json.rsp  appApplication_module.rsp
qml/: FONT_SETTINGS_GUIDE.md  GlobalState.qml  Main.qml
qml/components/: AccessDeniedPopup.qml  ActionButton.qml  AddProductPopup.qml  AnalogGauge.qml  AnimationEffect.qml  CircleActionButton.qml  CircularGauge.qml  CoilProgressBar.qml  CommonKeyboard.qml  CreateUserPopup.qml  CustomPopup.qml  DDButton.qml  DeleteUserPopup.qml  DiaCard.qml  DiagCard.qml  EditPasswordPopup.qml  LoginPopup.qml  LogoutConfirmationPopup.qml  LogoutPopup.qml  MenuTile.qml  NavPageIndicator.qml  PdfPreview.qml  PowerOffPopup.qml  SessionBridge.qml  SessionCountdownCircle.qml  SettingsS1.qml  SettingsS2.qml  SettingsS3.qml  SettingsS4.qml  SettingsS5.qml  SettingsS5_new.qml  SettingsS6.qml  TopBar.qml  Typography.qml  ValidationAlarmPopup.qml  ValidationScreenPopup.qml  ValueControl.qml  XyPlotScreen.qml
qml/screens/: AuditTrailScreen.qml  AutoLearnScreen.qml  BatchHistoryScreen.qml  BatchMenuScreen.qml  BatchReportScreen.qml  CoilOutputScreen.qml  DDusterScreen.qml  DeveloperSettingsScreen.qml  DiagnosisScreen.qml  FactorySettingsScreen.qml  HomeScreen.qml  MenuScreen.qml  ProductLibraryScreen.qml  ReportsFolderScreen.qml  ReportsLogScreen.qml  ReportsScreen.qml  SysDetailsScreen.qml  SysDiagnosisScreen.qml  SysSettingsScreen.qml  UserScreen.qml  XyPlotScreen.qml
src/: DatabaseManager.cpp  DatabaseManager.h  PdfExporter.cpp  PdfExporter.h  PlotItem.cpp  PlotItem.h  SerialManager.cpp  SerialManager.h  SessionManager.cpp  SessionManager.h  SystemController.cpp  SystemController.h  SystemDiagnosis.cpp  SystemDiagnosis.h  WifiScanner.cpp  WifiScanner.h  WifiScanner_new.cpp  main.cpp
